# mcp-connector

./: DOCKER.md  Dockerfile  OPENWEBUI.md  README.md  architecture.md  docker-compose-n8n.yml  docker-compose-openwebui.yml  start-all.ps1  system-prompt-ignore.md  systemPrompt2.0-ignore.md  systemprompt3.md
.github/agents/: Dynamite Search Judge.agent.md  Dynamite Search judge short.md  Dynamite Search.agent.md  Dynamite-Search-agent-short.md
docs/diagrams/: architecture.md
mcp-ado/: README.md  config.example.json  config.json  mcp_server.py  pyproject.toml
mcp-docupedia/: README.md  config.example.json  config.json  mcp_server.py  pyproject.toml
mcp-gateway/: README.md  gateway_config.json  gateway_server.py  pyproject.toml
