[project]
name = "mcp-docupedia"
version = "0.1.0"
description = "MCP Confluence/Docupedia Server with HTTP transport"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.116.1",
    "fastmcp>=2.11.3",
    "requests>=2.31.0",
    "urllib3>=2.0.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.38.0",
    "starlette>=0.50.0",
]
